设置过渡动画减少突兀感

--- a/chnword/Info.plist
+++ b/chnword/Info.plist
@@ -27,6 +27,7 @@
 	<key>UIAppFonts</key>
 	<array>
 		<string>Libian.ttc</string>
+		<string>AdobeKaitiStd-Regular.otf</string>
 	</array>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
