--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,6 @@ chnword.xcodeproj/xcuserdata/khtc.xcuserdatad/xcschemes/xcschememanagement.plist
 Build/Intermediates/chnword.build/Debug-iphonesimulator/chnword.build/dgph
 
 Build/Intermediates/chnword.build/Debug-iphonesimulator/chnwordTests.build/dgph
+chnword.xcodeproj/project.xcworkspace/xcuserdata/Suzic.xcuserdatad/WorkspaceSettings.xcsettings
+chnword.xcodeproj/xcuserdata/Suzic.xcuserdatad/xcschemes/chnword.xcscheme
+chnword.xcodeproj/xcuserdata/Suzic.xcuserdatad/xcschemes/xcschememanagement.plist
