--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,5 @@ Build/Intermediates/chnword.build/Debug-iphonesimulator/chnwordTests.build/dgph
 chnword.xcodeproj/project.xcworkspace/xcuserdata/Suzic.xcuserdatad/WorkspaceSettings.xcsettings
 chnword.xcodeproj/xcuserdata/Suzic.xcuserdatad/xcschemes/chnword.xcscheme
 chnword.xcodeproj/xcuserdata/Suzic.xcuserdatad/xcschemes/xcschememanagement.plist
+
+chnword.xcodeproj/xcuserdata/khtc.xcuserdatad/xcdebugger/Breakpoints_v2.xcbkptlist
