--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,5 @@ chnword.xcodeproj/xcuserdata/Suzic.xcuserdatad/xcschemes/chnword.xcscheme
 chnword.xcodeproj/xcuserdata/Suzic.xcuserdatad/xcschemes/xcschememanagement.plist
 
 chnword.xcodeproj/xcuserdata/khtc.xcuserdatad/xcdebugger/Breakpoints_v2.xcbkptlist
+
+chnword.xcodeproj/xcuserdata/khtc.xcuserdatad/xcdebugger/Breakpoints_v2.xcbkptlist
