--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,5 @@ chnword.xcodeproj/xcuserdata/Suzic.xcuserdatad/xcschemes/xcschememanagement.plis
 chnword.xcodeproj/xcuserdata/khtc.xcuserdatad/xcdebugger/Breakpoints_v2.xcbkptlist
 
 chnword.xcodeproj/xcuserdata/khtc.xcuserdatad/xcdebugger/Breakpoints_v2.xcbkptlist
+
+chnword.xcodeproj/xcuserdata/khtc.xcuserdatad/xcdebugger/Breakpoints_v2.xcbkptlist
